fixed nav link spacing in navbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -547,16 +547,18 @@ header.header ul li a {
 	padding: 2px 0px 0px 0px;
 }
 header.header ul {
-	display: flex;
+	display: flex !important;
 	padding: 2px 0px 0px /*70*/ 10px;
-	justify-content: flex-start;
+	/*justify-content: flex-start;*/
+	justify-content: space-between;
+	gap: 40px;
 	float: left;
 	width: 100%;
 	margin: 0;
 	align-items: center;
-	flex-direction: unset; /* gap: 56px;*/
+	flex-direction: row; /* gap: 56px;*/
 	display: grid;
-	grid-template-columns: 14.8% 13% 14.8% 11.9% 15.7% 30%;
+	/*grid-template-columns: 14.8% 13% 14.8% 11.9% 15.7% 30%;*/
 }
 
 @-moz-document url-prefix() {
